--- a/find_euler_circuit/find_euler_circuit.vcxproj
+++ b/find_euler_circuit/find_euler_circuit.vcxproj
@@ -133,6 +133,9 @@
   <ItemGroup>
     <ClInclude Include="Graph.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="test.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
